--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -391,5 +391,100 @@ ul
     align-self: center;
 
 }
+footer{
+    background-color: #23272a;
+    width: 100%;
+    height: auto;
+}
 
+.contenitore-piedipagina{
+    display: flex;
+    justify-content: space-evenly;
+    gap: 5px;
+
+}
+
+/* contenitore delle lista */
+.lista-footer{
+    display: flex;
+    width: 300px;
+    height: 335px;
+    background-color: #ffff;
+    margin-top: 100px;
+   
+   
+}
+/* contenitore lista 2 */
+.lista-footer2{
+    display: flex;
+    width: 300px;
+    height: 665px;
+    background-color: #ffff;
+    margin-top: 100px;
+}
+/* contenitore lista 3  */
+.lista-footer3{
+    display: flex;
+    width: 350px;
+    height: 270px;
+    background-color: #ffff;
+    margin-top: 100px;
+}
+.menu1 li{
+    width: 100%;
+    height: 50px;
+    margin: 5px auto;
+    list-style-type: none;
+    background-color: cadetblue;
+}
+.lista-footer3{
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+.lista-footer3 h2{
+    background-color: burlywood;
+    width: 100%;
+    height: 100px;
+    display: flex;
+    
+}
+
+.lista-footer3 span{
+    background-color: brown;
+    width: 100%;
+    height: 100px;
+    display: flex;
+}
+
+.button2{
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    width: 100%;
+    height: 60px;
+    gap: 30px;
+}
+
+.button2 button{
+    background-color: blue;
+    width: 50px;
+    height: 50px;
+
+}
+
+
+.hr hr{
+    background-color: #404b6a; 
+    width: 65%;
+    margin: 10px auto;
+}
+.logo-tasto{
+    display: flex;
+    justify-content: space-between;
+    width: 65%;
+    height: 100px;
+    margin: 0 auto;
+}
 
